--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/rootLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="#fff">
+    android:background="#fff"
+    android:gravity="center">
+
+<!--    <com.github.mikephil.charting.charts.BarChart-->
+<!--        android:layout_weight="2"-->
+<!--        android:id="@+id/barchart"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="0dp"/>-->
+
+    <Button
+        android:id="@+id/btnSaveTab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Сохранить"/>
+
+    <Button
+        android:id="@+id/btnOpenTab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Открыть"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -44,15 +64,15 @@
         android:layout_height="200dp"
         android:background="#F4F3F3"
         android:paddingTop="10dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginStart="10dp">
 
         <HorizontalScrollView
             android:id="@+id/horizontalScroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:fillViewport="true"
             tools:ignore="UselessParent">
-
-
 
                 <FrameLayout
                     android:layout_width="match_parent"
