--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,225 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootLayout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:background="#fff"
-    android:gravity="center">
-
-<!--    <com.github.mikephil.charting.charts.BarChart-->
-<!--        android:layout_weight="2"-->
-<!--        android:id="@+id/barchart"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"/>-->
-
-    <Button
-        android:id="@+id/btnSaveTab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Сохранить"/>
-
-    <Button
-        android:id="@+id/btnOpenTab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Открыть"/>
+    android:background="#070B31">
 
     <LinearLayout
+        android:layout_weight="1"
+        android:id="@+id/noTabsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        tools:ignore="UselessParent"
         android:gravity="center"
-        android:layout_marginBottom="20dp">
-
-        <Button
-            android:id="@+id/btnStart"
+        android:layout_marginBottom="10dp">
+        <TextView
+            android:id="@+id/noTabs"
+            android:textSize="10pt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start"
-            android:layout_marginEnd="20dp"/>
-
-        <Button
-            android:id="@+id/btnPause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pause"
-            android:layout_marginEnd="20dp"/>
-
-        <Button
-            android:id="@+id/btnStop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Stop" />
-
-
+            android:textColor="#fff"/>
     </LinearLayout>
+
+    <ScrollView
+        android:layout_weight="20"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        android:layout_gravity="center">
+
+        <LinearLayout
+            android:id="@+id/tabCards"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:orientation="vertical">
+
+        </LinearLayout>
+    </ScrollView>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="#F4F3F3"
-        android:paddingTop="10dp"
-        android:layout_marginBottom="50dp"
-        android:layout_marginStart="10dp">
-
-        <HorizontalScrollView
-            android:id="@+id/horizontalScroll"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fillViewport="true"
-            tools:ignore="UselessParent">
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:ignore="ScrollViewSize">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/t"
-                            android:layout_width="43dp"
-                            android:layout_height="47dp"
-                            android:layout_marginStart="19dp"
-                            android:text="T"
-                            android:textColor="#000"
-                            android:textSize="45sp" />
-
-                        <TextView
-                            android:id="@+id/a"
-                            android:layout_width="43dp"
-                            android:layout_height="47dp"
-                            android:layout_marginStart="19dp"
-                            android:text="A"
-                            android:textColor="#000"
-                            android:textSize="45sp" />
-
-                        <TextView
-                            android:id="@+id/b"
-                            android:layout_width="43dp"
-                            android:layout_height="47dp"
-                            android:layout_marginStart="19dp"
-                            android:text="B"
-                            android:textColor="#000"
-                            android:textSize="45sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/strings"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
-
-                        <FrameLayout
-                            android:id="@+id/line_1"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:scrollbars="horizontal">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                            <!--                    <TextView-->
-                            <!--                        android:id="@+id/lad_1_1"-->
-                            <!--                        android:layout_width="30dp"-->
-                            <!--                        android:layout_height="30dp"-->
-                            <!--                        android:layout_marginStart="100dp"-->
-                            <!--                        android:background="@drawable/rectangle_2"-->
-                            <!--                        android:paddingStart="7dp"-->
-                            <!--                        android:text="1"-->
-                            <!--                        android:textColor="#000"-->
-                            <!--                        android:textSize="20sp"-->
-                            <!--                        tools:ignore="RtlSymmetry" />-->
-
-                        </FrameLayout>
-
-
-                        <FrameLayout
-                            android:id="@+id/line_2"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:id="@+id/line_3"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:id="@+id/line_4"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:id="@+id/line_5"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                        </FrameLayout>
-
-                        <FrameLayout
-                            android:id="@+id/line_6"
-                            android:layout_width="match_parent"
-                            android:layout_height="30dp">
-
-                            <View
-                                android:layout_width="match_parent"
-                                android:layout_height="1dp"
-                                android:layout_marginTop="15dp"
-                                android:background="@drawable/line_1" />
-
-                        </FrameLayout>
-                    </LinearLayout>
-
-                    <View
-                        android:id="@+id/line_left"
-                        android:layout_width="1dp"
-                        android:layout_height="150dp"
-                        android:layout_marginTop="15dp"
-                        android:background="@drawable/line_1" />
-                </FrameLayout>
-
-        </HorizontalScrollView>
+        android:layout_height="80dp">
+        <Button
+            app:backgroundTint="@null"
+            android:id="@+id/createTab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/new_tab_button_background"
+            android:text="Создать новую табулатуру"
+            android:textColor="#fff"
+            android:layout_marginBottom="10dp"/>
     </RelativeLayout>
+
 </LinearLayout>
