--- a/app/src/main/res/layout/tab_cards_layout.xml
+++ b/app/src/main/res/layout/tab_cards_layout.xml
@@ -7,9 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:background="#070B31"
-    android:gravity="center">
 
+    android:background="#070B31"
+
+    android:gravity="center">
+    <!--    android:background="#C7D0CC"-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
