--- a/app/src/main/res/layout/tab_cards_layout.xml
+++ b/app/src/main/res/layout/tab_cards_layout.xml
@@ -22,14 +22,10 @@
                 android:orientation="vertical">
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp">
+                    android:layout_height="20dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginEnd="10dp">
 
-                    <ImageView
-                        android:id="@+id/btnSaveTab"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:src="@drawable/save"/>
                     <TextView
                         android:id="@+id/frequencyText"
                         android:layout_width="wrap_content"
@@ -37,24 +33,16 @@
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
                         android:textColor="#fff"
-                        android:textSize="20sp"
+                        android:textSize="15sp"
                         android:text="Frequency: 0"/>
 
                 </RelativeLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp">
-<!--                        <com.github.mikephil.charting.charts.BarChart-->
-<!--                            android:id="@+id/barchart"-->
-<!--                            android:layout_width="match_parent"-->
-<!--                            android:layout_height="match_parent"/>-->
-                </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="200dp"
                     android:background="#3D2E0D"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="10dp"
                     android:layout_marginStart="10dp">
 
                     <HorizontalScrollView
@@ -293,30 +281,40 @@
                     </LinearLayout>
                 </RelativeLayout>
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
                     android:gravity="center"
-                    android:layout_marginBottom="20dp">
+                    android:layout_marginEnd="10dp">
 
                     <ImageView
                         android:id="@+id/btnPausePlay"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        app:srcCompat="@drawable/no_microphone"
-                        android:layout_weight="2" />
+                        android:layout_height="50dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        app:srcCompat="@drawable/no_microphone" />
+
+                    <ImageView
+                        android:id="@+id/btnSaveTab"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/btnPausePlay"
+                        android:src="@drawable/save" />
 
                     <Button
-                        android:layout_weight="1"
                         android:id="@+id/btnClear"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="20dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
                         android:text="Очистить" />
 
 
-                </LinearLayout>
+                </RelativeLayout>
             </LinearLayout>
     </ScrollView>
 </LinearLayout>
