--- a/app/src/main/res/layout/tab_cards_layout.xml
+++ b/app/src/main/res/layout/tab_cards_layout.xml
@@ -80,156 +80,14 @@
 <!--                                    android:textSize="20sp"-->
 <!--                                    tools:ignore="RtlSymmetry" />-->
 
+<!--                                <LinearLayout-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="match_parent"-->
+<!--                                    android:background="#806AA147"/>-->
+
 <!--                            </FrameLayout>-->
 
                         </LinearLayout>
-
-                        <!--                            <FrameLayout-->
-                        <!--                                android:layout_width="match_parent"-->
-                        <!--                                android:layout_height="match_parent"-->
-                        <!--                                tools:ignore="ScrollViewSize">-->
-
-                        <!--                                <LinearLayout-->
-                        <!--                                    android:layout_width="wrap_content"-->
-                        <!--                                    android:layout_height="wrap_content"-->
-                        <!--                                    android:layout_marginTop="15dp"-->
-                        <!--                                    android:orientation="vertical">-->
-
-                        <!--                                    <TextView-->
-                        <!--                                        android:id="@+id/t"-->
-                        <!--                                        android:layout_width="43dp"-->
-                        <!--                                        android:layout_height="47dp"-->
-                        <!--                                        android:layout_marginStart="19dp"-->
-                        <!--                                        android:text="T"-->
-                        <!--                                        android:textColor="#000"-->
-                        <!--                                        android:textSize="45sp" />-->
-
-                        <!--                                    <TextView-->
-                        <!--                                        android:id="@+id/a"-->
-                        <!--                                        android:layout_width="43dp"-->
-                        <!--                                        android:layout_height="47dp"-->
-                        <!--                                        android:layout_marginStart="19dp"-->
-                        <!--                                        android:text="A"-->
-                        <!--                                        android:textColor="#000"-->
-                        <!--                                        android:textSize="45sp" />-->
-
-                        <!--                                    <TextView-->
-                        <!--                                        android:id="@+id/b"-->
-                        <!--                                        android:layout_width="43dp"-->
-                        <!--                                        android:layout_height="47dp"-->
-                        <!--                                        android:layout_marginStart="19dp"-->
-                        <!--                                        android:text="B"-->
-                        <!--                                        android:textColor="#000"-->
-                        <!--                                        android:textSize="45sp" />-->
-                        <!--                                </LinearLayout>-->
-
-                        <!--                                <LinearLayout-->
-                        <!--                                    android:id="@+id/strings"-->
-                        <!--                                    android:layout_width="match_parent"-->
-                        <!--                                    android:layout_height="wrap_content"-->
-                        <!--                                    android:orientation="vertical">-->
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_1"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp"-->
-                        <!--                                        android:scrollbars="horizontal">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                        &lt;!&ndash;                    <TextView&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:id="@+id/lad_1_1"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:layout_width="30dp"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:layout_height="30dp"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:layout_marginStart="100dp"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:background="@drawable/rectangle_2"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:paddingStart="7dp"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:text="1"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:textColor="#000"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        android:textSize="20sp"&ndash;&gt;-->
-                        <!--                                        &lt;!&ndash;                        tools:ignore="RtlSymmetry" />&ndash;&gt;-->
-
-                        <!--                                    </FrameLayout>-->
-
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_2"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                    </FrameLayout>-->
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_3"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                    </FrameLayout>-->
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_4"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                    </FrameLayout>-->
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_5"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                    </FrameLayout>-->
-
-                        <!--                                    <FrameLayout-->
-                        <!--                                        android:id="@+id/line_6"-->
-                        <!--                                        android:layout_width="match_parent"-->
-                        <!--                                        android:layout_height="30dp">-->
-
-                        <!--                                        <View-->
-                        <!--                                            android:layout_width="match_parent"-->
-                        <!--                                            android:layout_height="1dp"-->
-                        <!--                                            android:layout_marginTop="15dp"-->
-                        <!--                                            android:background="@drawable/line_1" />-->
-
-                        <!--                                    </FrameLayout>-->
-                        <!--                                </LinearLayout>-->
-
-                        <!--                                <View-->
-                        <!--                                    android:id="@+id/line_left"-->
-                        <!--                                    android:layout_width="1dp"-->
-                        <!--                                    android:layout_height="150dp"-->
-                        <!--                                    android:layout_marginTop="15dp"-->
-                        <!--                                    android:background="@drawable/line_1" />-->
-                        <!--                            </FrameLayout>-->
-
                     </HorizontalScrollView>
 
                     <LinearLayout
@@ -304,6 +162,15 @@
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@+id/btnPausePlay"
                         android:src="@drawable/save" />
+
+                    <Button
+                        android:id="@+id/btnPlay"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/btnSaveTab"
+                        android:text="Воспр" />
 
                     <Button
                         android:id="@+id/btnClear"
