--- a/app/src/main/res/layout/tab_btn_layout_view.xml
+++ b/app/src/main/res/layout/tab_btn_layout_view.xml
@@ -24,6 +24,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/cardDeleteTab"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/trash"
+                android:contentDescription="TODO" />
+
             <LinearLayout
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -39,11 +47,11 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/cardDeleteTab"
+                android:id="@+id/share"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/trash"
-                android:contentDescription="TODO" />
+                android:src="@drawable/share"/>
+
         </LinearLayout>
 
     </LinearLayout>
