--- a/app/src/main/res/layout/tab_cards_layout.xml
+++ b/app/src/main/res/layout/tab_cards_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/tabRoot"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -25,6 +26,21 @@
                     android:layout_height="20dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginEnd="10dp">
+
+                    <TextView
+                        android:id="@+id/textThreshold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Порог:"
+                        android:layout_alignParentStart="true"
+                        android:textColor="#fff"/>
+
+                    <Spinner
+                        android:id="@+id/threshold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_toEndOf="@+id/textThreshold"/>
 
                     <TextView
                         android:id="@+id/frequencyText"
