--- a/app/src/main/res/layout/users_tabs.xml
+++ b/app/src/main/res/layout/users_tabs.xml
@@ -13,6 +13,14 @@
         android:layout_centerInParent="true"
         tools:ignore="UselessParent">
 
+        <TextView
+            android:id="@+id/no_internet_users"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textColor="#000"
+            android:text="Нет подключения к интернету"/>
+
         <ProgressBar
             android:id="@+id/progressBar"
             android:layout_width="wrap_content"
