--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,4 +14,16 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="android:background">#2B2B2B</item>
+        <item name="android:textColor">#C6C6C6</item>
+        <item name="android:textColorPrimary">#C6C6C6</item>
+        <item name="android:buttonBarButtonStyle">@style/AlertDialogButtons</item>
+    </style>
+
+    <style name="AlertDialogButtons">
+        <item name="android:textColor">#C6C6C6</item>
+        <item name="android:background">#00000000</item>
+    </style>
+
 </resources>
