--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,17 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AlertDialogStyle" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:background">#2B2B2B</item>
+        <item name="android:textColor">#C6C6C6</item>
+        <item name="android:textColorPrimary">#C6C6C6</item>
+        <item name="android:buttonBarButtonStyle">@style/AlertDialogButtons</item>
+    </style>
+
+    <style name="AlertDialogButtons">
+        <item name="android:textColor">#C6C6C6</item>
+        <item name="android:background">#00000000</item>
+    </style>
+
 </resources>
