--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,15 +19,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/user_title_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/ic_background_title"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:textColor="#000"
-            android:text="Ваши табулатуры"/>
+<!--        <TextView-->
+<!--            android:id="@+id/user_title_type"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@drawable/ic_background_title"-->
+<!--            android:gravity="center"-->
+<!--            android:textSize="18sp"-->
+<!--            android:textColor="#000"-->
+<!--            android:text="Ваши табулатуры"/>-->
 
         <RelativeLayout
             android:id="@+id/topMenu"
