--- a/app/src/main/res/layout/card_users_layout.xml
+++ b/app/src/main/res/layout/card_users_layout.xml
@@ -16,18 +16,65 @@
             android:textColor="#3E3E3E"
             android:layout_alignParentEnd="true" />
 
-        <ImageView
-            android:id="@+id/tabImage"
+<!--        <ImageView-->
+<!--            android:id="@+id/tabImage"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:src="@drawable/tabulatur_img"-->
+<!--            android:contentDescription="@string/todo"-->
+<!--            android:layout_below="@+id/userNameTab"/>-->
+
+        <HorizontalScrollView
+            android:id="@+id/previewHorizontalScroll"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:src="@drawable/tabulatur_img"
-            android:contentDescription="@string/todo"
-            android:layout_below="@+id/userNameTab"/>
+            android:fillViewport="true"
+            android:layout_marginBottom="5dp"
+            android:layout_below="@+id/userNameTab">
+
+            <LinearLayout
+                android:id="@+id/previewStrings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+<!--                <FrameLayout-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content">-->
+
+<!--                    <ImageView-->
+<!--                        android:layout_width="40dp"-->
+<!--                        android:src="@drawable/strings"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:contentDescription="@string/todo" />-->
+
+<!--                    <TextView-->
+<!--                        android:id="@+id/lad_1_1"-->
+<!--                        android:layout_width="15dp"-->
+<!--                        android:layout_height="15dp"-->
+<!--                        android:layout_marginStart="14dp"-->
+<!--                        android:layout_marginTop="1dp"-->
+<!--                        android:background="@drawable/note_standard"-->
+<!--                        android:gravity="center"-->
+<!--                        android:text="1"-->
+<!--                        android:textColor="#000"-->
+<!--                        android:textSize="8sp" />-->
+
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="40dp"-->
+<!--                        android:layout_height="100dp"-->
+<!--                        android:background="#806AA147"/>-->
+
+<!--                </FrameLayout>-->
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tabImage">
+            android:layout_below="@+id/previewHorizontalScroll">
 
             <ImageView
                 android:id="@+id/usersTabDelete"
