--- a/app/src/main/res/layout/user_fragment.xml
+++ b/app/src/main/res/layout/user_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_centerInParent="true"
     android:background="#9DDCE0">
 
     <RelativeLayout
@@ -13,13 +14,29 @@
         android:layout_centerInParent="true"
         tools:ignore="UselessParent">
 
-        <TextView
+        <RelativeLayout
             android:id="@+id/no_tabs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="У вас нет сохранённых табулатур"
-            android:layout_centerInParent="true"
-            android:textColor="#000"/>
+            android:layout_centerInParent="true">
+
+            <TextView
+                android:id="@+id/no_tabs_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_found"
+                android:layout_centerHorizontal="true"
+                android:textColor="#000"/>
+            <ImageView
+                android:layout_below="@+id/no_tabs_text"
+                android:layout_width="wrap_content"
+                android:layout_height="70dp"
+                android:layout_marginTop="10dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_no_found"
+                android:contentDescription="@string/todo" />
+
+        </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/userTabs"
