--- a/app/src/main/res/layout/users_tabs.xml
+++ b/app/src/main/res/layout/users_tabs.xml
@@ -13,13 +13,33 @@
         android:layout_centerInParent="true"
         tools:ignore="UselessParent">
 
+        <LinearLayout
+            android:id="@+id/sortLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentTop="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Сортировать по:"/>
+
+            <Spinner
+                android:id="@+id/tabSort"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+
         <TextView
             android:id="@+id/no_internet_users"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:textColor="#000"
-            android:text="Нет подключения к интернету"/>
+            android:text="@string/no_internet"
+            tools:ignore="NotSibling" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -33,7 +53,9 @@
             android:id="@+id/usersTabs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/sortLayout"
+            tools:ignore="NotSibling" />
 
     </RelativeLayout>
 
